# visceral

./: .dockerignore  .env.example  .gitignore  API Documentation.md  Dockerfile  README.md  Top_1000_data.xlsx  api_documentation.md  argilla-tag-rag-generation.py  argilla-title-rag-generation.py  data_preprocessing(6_8_24).ipynb  data_preprocessing.ipynb  docker-compose.yml  evaluate.csv  finetune_generated_tags.csv  finetune_generated_tags_2.csv  finetune_generated_titles.csv  flow_1.py  flow_2.py  play.ipynb  play.py  pyproject.toml  rag_generated_tags.csv  rag_generated_tags_2.csv  rag_generated_titles.csv  sonar-project.properties  tag_generation_finetune.ipynb  tag_rag.ipynb  tag_rag.py  test.csv  testing_flow_1.ipynb  title_finetuning.ipynb  title_rag.py  train.csv  training(6-8-24).csv  training.csv
.github/workflows/: prod-deploy.yml  scanner.yml  stg-deploy.yml
sql_schema/: 01_thumbnail_guidelines.sql  02_recommended_thumbnails.sql  03_training_data.sql  04_thumbnails_for_guidelines.sql
src/flows/: data_management_services.py  generate_thumbnail_guidelines.py  tag.py  thumbnail_critique.py  title.py
src/visceral_poc/: main.py
src/visceral_poc/flows/: tag.py  title.py
tag_finetuned_model/: adapter_config.json
thumbnail-guidelines/: 1v1.md  Deathrun.md  Team Deathmatch.md  Tycoon.md  Zonewars.md
title_finetuned_model/: adapter_config.json  tokenizer_config.json
workflow-notes/: visceral-finetune-generated-tags.md  visceral-finetune-generated-titles.md  visceral-rag-generated-tags.md  visceral-rag-generated-titles.md
