[project]
name = "visceral-poc"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Hamid Raza", email = "git@hamidlab.com"},
]
dependencies = [
    "openai>=1.37.1",
    "python-dotenv>=1.0.1",
    "fastapi>=0.111.1",
    "uvicorn[standard]>=0.30.3",
    "pandas>=2.2.2",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "newrelic>=9.12.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "newrelic>=9.12.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
_.env_file = ".env"
dev = "uvicorn main:app --reload --app-dir ./src/visceral_poc"
start = "newrelic-admin run-python -m uvicorn src.visceral_poc.main:app --port 8000 --host 0.0.0.0"
